--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-router": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-scroll": "^1.7.11"
   },
   "scripts": {
     "start": "react-scripts start",
