--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-icons": "^3.5.0",
     "react-router": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-scroll": "^1.7.11"
